# OysterShell

./: README.md  hello.py  pyproject.toml
notebooks/: 2a. setup_vllm.ipynb  2b. vllm_inference.ipynb  local_pc_llm.ipynb  vllm_inference.ipynb
tools/: weather_mcp.py
