[project]
name = "oystershell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "llama-index>=0.12.49",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai-like>=0.4.0",
]
