[project]
name = "oystershell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "llama-index>=0.12.49",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai-like>=0.4.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai>=1.96.1",
    "mcp[cli]>=1.11.0",
    "langchain-mcp-adapters>=0.1.9",
    "llama-index-tools-mcp>=0.2.6",
    "ollama>=0.5.1",
]
